fixed z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@
   max-width: 1440px;
   width: 100%;
   height: 100px;
-  z-index: 6;
+  z-index: 7;
   pointer-events: none;
 }
 
@@ -301,7 +301,7 @@ header {
   padding-top: 23px;
   padding-bottom: 23px;
   border-bottom: 1px solid #000000;
-  z-index: 5;
+  z-index: 6;
 }
 
 header .burger-button {
@@ -316,7 +316,7 @@ header .burger-button {
   display: block;
   width: 100%;
   height: 101px;
-  z-index: 5;
+  z-index: 6;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   background-color: rgba(36, 32, 40, 0.5);
